--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "openqasm"
 version = "0.1.0"
 authors = ["Tuomas Laakkonen <pigworts2@gmail.com>"]
-description = "Parser and interpreter for OpenQASM 2.0"
+description = "Parser and translator for OpenQASM 2.0"
 repository = "https://github.com/tuomas56/openqasm-rs"
 license = "MIT or Apache-2.0"
 keywords = ["quantum", "qasm"]
@@ -13,7 +13,11 @@ edition = "2021"
 petgraph = "0.6.0"
 lalrpop-util = { version = "0.19.7", features = ["lexer"] }
 regex = "1"
-ariadne = "0.1.3"
+ariadne = { version = "0.1.3", optional = true }
+thiserror = "1.0.30"
 
 [build-dependencies]
 lalrpop = "0.19.7"
+
+[features]
+default = ["ariadne"]
