--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,10 @@ lalrpop-util = { version = "0.19.7", features = ["lexer"] }
 regex = "1"
 ariadne = { version = "0.1.3", optional = true }
 thiserror = "1.0.30"
+pretty = { version = "0.11.2", optional = true }
 
 [build-dependencies]
 lalrpop = "0.19.7"
 
 [features]
-default = ["ariadne"]
+default = ["ariadne", "pretty"]
