--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,25 @@ edition = "2021"
 petgraph = "0.6.0"
 lalrpop-util = { version = "0.19.7", features = ["lexer"] }
 regex = "1"
-ariadne = { version = "0.1.3", optional = true }
 thiserror = "1.0.30"
+ariadne = { version = "0.1.3", optional = true }
 pretty = { version = "0.11.2", optional = true }
+serde = { version = "1", features = ["derive"], optional = true }
 
 [build-dependencies]
 lalrpop = "0.19.7"
+rustc_version = "0.4.0"
 
 [features]
-default = ["ariadne", "pretty"]
+default = []
+
+[[example]]
+name = "basic"
+required-features = ["ariadne"]
+
+[[example]]
+name = "pretty"
+required-features = ["pretty"]
+
+[package.metadata.docs.rs]
+all-features = true
