--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ petgraph = "0.6.0"
 lalrpop-util = { version = "0.19.7", features = ["lexer"] }
 regex = "1"
 thiserror = "1.0.30"
+num = { version = "0.4.0", default-features = false }
 ariadne = { version = "0.1.3", optional = true }
 pretty = { version = "0.11.2", optional = true }
 serde = { version = "1", features = ["derive"], optional = true }
