--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ petgraph = "0.6.0"
 lalrpop-util = { version = "0.19.7", features = ["lexer"] }
 regex = "1"
 thiserror = "1.0.30"
-num = { version = "0.4.0", default-features = false }
+num = { version = "0.4.0", default-features = false, features = ["libm"] }
 ariadne = { version = "0.1.3", optional = true }
 pretty = { version = "0.11.2", optional = true }
 serde = { version = "1", features = ["derive"], optional = true }
@@ -22,6 +22,9 @@ serde = { version = "1", features = ["derive"], optional = true }
 [build-dependencies]
 lalrpop = "0.19.7"
 rustc_version = "0.4.0"
+
+[dev-dependencies]
+rand = "0.8.5"
 
 [features]
 default = []
@@ -33,6 +36,9 @@ required-features = ["ariadne"]
 [[example]]
 name = "pretty"
 required-features = ["pretty"]
+
+[[example]]
+name = "linear"
 
 [package.metadata.docs.rs]
 all-features = true
