--- a/openqasm/Cargo.toml
+++ b/openqasm/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Tuomas Laakkonen <pigworts2@gmail.com>"]
 description = "Parser and translator for OpenQASM 2.0"
 repository = "https://github.com/tuomas56/openqasm-rs"
 homepage = "https://github.com/tuomas56/openqasm-rs"
-license = "MIT or Apache-2.0"
+license = "MIT OR Apache-2.0"
 keywords = ["quantum", "qasm"]
 categories = ["parser-implementations", "compilers"]
 edition = "2021"
