Add readme explicitly to manifest

--- a/openqasm/Cargo.toml
+++ b/openqasm/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "openqasm"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Tuomas Laakkonen <pigworts2@gmail.com>"]
 description = "Parser and translator for OpenQASM 2.0"
 repository = "https://github.com/tuomas56/openqasm-rs"
 homepage = "https://github.com/tuomas56/openqasm-rs"
+readme = "../README.md"
 license = "MIT OR Apache-2.0"
 keywords = ["quantum", "qasm"]
 categories = ["parser-implementations", "compilers"]
