--- a/openqasm/Cargo.toml
+++ b/openqasm/Cargo.toml
@@ -13,8 +13,8 @@ edition = "2021"
 
 [dependencies]
 petgraph = "0.6.0"
-lalrpop-util = { version = "0.19.7", features = ["lexer"] }
-regex = "1"
+lalrpop-util = { version = "0.19.7" }
+logos = "0.12.0"
 thiserror = "1.0.30"
 num = { version = "0.4.0", default-features = false, features = ["libm"] }
 ariadne = { version = "0.1.3", optional = true }
