--- a/qasm-convert/Cargo.toml
+++ b/qasm-convert/Cargo.toml
@@ -2,11 +2,18 @@
 name = "qasm-convert"
 version = "0.1.0"
 edition = "2021"
+authors = ["Tuomas Laakkonen <pigworts2@gmail.com>"]
+description = "Utility to convert OpenQASM 2.0 programs to diagrams."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-openqasm = { path = "../openqasm", features = ["ariadne", "pretty", "serde"] }
+openqasm = { path = "../openqasm", features = ["ariadne"] }
 clap = { version = "3.1.0", features = ["derive"] }
-serde_json = "1.0"
-plotters = { version = "0.3.1", default-features = false, features = ["svg_backend"] }
+minidom = "0.13.0"
+rustybuzz = "0.5.0"
+exitcode = "1.1.2"
+tiny-skia = "0.6.3"
+resvg = "0.22.0"
+usvg = "0.22.0"
+svgtypes = "0.8.0"
