--- a/openqasm/Cargo.toml
+++ b/openqasm/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 
 [dependencies]
 petgraph = "0.6.0"
-lalrpop-util = { version = "0.19.7" }
+lalrpop-util = "0.21.0"
 logos = "0.12.0"
 thiserror = "1.0.30"
 num = { version = "0.4.3", default-features = false, features = ["libm"] }
@@ -22,7 +22,7 @@ pretty = { version = "0.11.2", optional = true }
 serde = { version = "1", features = ["derive"], optional = true }
 
 [build-dependencies]
-lalrpop = "0.19.7"
+lalrpop = "0.21.0"
 rustc_version = "0.4.0"
 
 [dev-dependencies]
